crates/stc_ts_file_analyzer/tests/pass/types/intersection/intersectionReductionStrict/7.ts
// @strict: true

const enum Tag1 {
  a = "a",
  b = "b",
}
const enum Tag2 {}

declare let s1: string & Tag1;
declare let s2: string & Tag2;

s1 = s2;
s2 = s1;
