crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/intersectionReduction/2.ts
// @strict: false

const x1 = { a: "foo", b: 42 };
const x2 = { a: "foo", b: true };

declare let k: "a" | "b";

x1[k] = "bar" as any; // Error
x2[k] = "bar" as any; // Error
